--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -14,7 +14,7 @@
 	<name>product-service</name>
 	<description>Product Service</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>18</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,6 +38,18 @@
 		</dependency>
 	</dependencies>
 
+	<dependencyManagement>
+	    <dependencies>
+	        <dependency>
+	            <groupId>org.testcontainers</groupId>
+	            <artifactId>testcontainers-bom</artifactId>
+	            <version>1.17.3</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+	        </dependency>
+	    </dependencies>
+	</dependencyManagement>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -53,6 +65,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>product-service-exe</finalName>
 	</build>
 
 </project>
